# parallel-mc-transport

./: .gitignore  README.md  pyproject.toml
parallel_mc/: __init__.py  __main__.py  cli.py  constants.py  eigenvalue.py  entropy.py  geometry.py  materials.py  nuclear_data.py  particle.py  physics.py  tallies.py
parallel_mc/backends/: __init__.py  base.py  cpu.py  cuda.py  metal.py
parallel_mc/validation/: __init__.py  compare.py
report/: generate_report.py
results/: bench_cpu.json  bench_metal.json  bench_metal_1M.json  bench_metal_200k.json  bench_metal_prod.json  bench_python.json  benchmark_m4max_report.md  openmc_results.json  parallel_mc_results.json
tests/test_parallel_mc/: conftest.py  test_constants.py  test_cpu_backend.py  test_eigenvalue.py  test_geometry.py  test_materials.py  test_nuclear_data.py  test_particle.py  test_physics.py
